# grpc-streaming-chatroom

./: .gitignore  README.md  buf.gen.yaml
.github/workflows/: buf.yaml  docker.yaml
client/: Dockerfile  go.mod  go.sum  main.go
cpp-client/: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
proto/: buf.yaml
proto/chat/v1/: chat.proto
server/: Dockerfile  go.mod  go.sum  main.go
